--- a/albionboxes/dev_lilygo_eink_display.yaml
+++ b/albionboxes/dev_lilygo_eink_display.yaml
@@ -49,6 +49,7 @@ packages:
   internal_temp: !include common/internal_temp.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
+  default_fonts: !include common/fonts.yaml
 #  i2c: !include common/default_i2c.yaml
 #  button: !include { file: common/default_atom_button.yaml, vars: { button_pin: 39 } }
 
@@ -69,9 +70,96 @@ external_components:
 #  - source: github://kaeltis/esphome-lilygo-t547plus
 #    components: ["lilygo_t5_47_battery"]
 
+text_sensor:
+  - platform: homeassistant
+    name: "Bart Next Train Antioch Status"
+    entity_id: sensor.bart_next_train_antioch_status
+    id: bart_next_train_antioch_status
+    on_value:
+      then:
+        - component.update: t5_display
+  - platform: homeassistant
+    name: "Bart Next Train Berryessa Status"
+    entity_id: sensor.bart_next_train_berryessa_status
+    id: bart_next_train_berryessa_status
+    on_value:
+      then:
+        - component.update: t5_display
+  - platform: homeassistant
+    name: "Bart Next Train Daly City Status"
+    entity_id: sensor.bart_next_train_daly_city_status
+    id: bart_next_train_daly_city_status
+    on_value:
+      then:
+        - component.update: t5_display
+  - platform: homeassistant
+    name: "Bart Next Train Dublin/Pleasanton Status"
+    entity_id: sensor.bart_next_train_dublin_pleasanton_status
+    id: bart_next_train_dublin_pleasanton_status
+    on_value:
+      then:
+        - component.update: t5_display
+  - platform: homeassistant
+    name: "Bart Next Train Millbrae Status"
+    entity_id: sensor.bart_next_train_millbrae_status
+    id: bart_next_train_millbrae_status
+    on_value:
+      then:
+        - component.update: t5_display
+  - platform: homeassistant
+    name: "Bart Next Train Pittsburg/Bay Point Status"
+    entity_id: sensor.bart_next_train_pittsburg_bay_point_status
+    id: bart_next_train_pittsburg_bay_point_status
+    on_value:
+      then:
+        - component.update: t5_display
+  - platform: homeassistant
+    name: "Bart Next Train Richmond Status"
+    entity_id: sensor.bart_next_train_richmond_status
+    id: bart_next_train_richmond_status
+    on_value:
+      then:
+        - component.update: t5_display
+  - platform: homeassistant
+    name: "Bart Next Train SF Airport Status"
+    entity_id: sensor.bart_next_train_sf_airport_status
+    id: bart_next_train_sf_airport_status
+    on_value:
+      then:
+        - component.update: t5_display
+  - platform: homeassistant
+    name: "Bart Next Train SFO/Millbrae Status"
+    entity_id: sensor.bart_next_train_sfo_millbrae_status
+    id: bart_next_train_sfo_millbrae_status
+    on_value:
+      then:
+        - component.update: t5_display
+  - platform: homeassistant
+    name: "Bart Next Train 24th Street Status"
+    entity_id: sensor.bart_next_train_24th_street_status
+    id: bart_next_train_24th_street_status
+    on_value:
+      then:
+        - component.update: t5_display
+
 display:
   - platform: t547
     id: t5_display
     update_interval: 30s
     lambda: |-
-      it.line(0, 0, 50, 50);
+      ESP_LOGD("display", "got antioch state %s", id(bart_next_train_antioch_status).state);
+      ESP_LOGD("display", "got daly city state %s", id(bart_next_train_daly_city_status).state);
+      ESP_LOGD("display", "got antioch state to string %s", id(bart_next_train_antioch_status).state.c_str());
+      ESP_LOGD("display", "got daly city state to string %s", id(bart_next_train_daly_city_status).state.c_str());
+      ESP_LOGD("display", "got antioch numerical state %d", id(bart_next_train_antioch_status).state);
+      ESP_LOGD("display", "got daly city numerical state %d", id(bart_next_train_daly_city_status).state);
+      it.printf(0, 0, id(my_font), "The next Antioch is: %s", id(bart_next_train_antioch_status).state.c_str());
+      it.printf(0, 20, id(my_font), "The next Berryessa is: %s", id(bart_next_train_berryessa_status).state.c_str());
+      it.printf(0, 40, id(my_font), "The next Daly City is: %s", id(bart_next_train_daly_city_status).state.c_str());
+      it.printf(0, 60, id(my_font), "The next Dublin/Pleasanton is: %s", id(bart_next_train_dublin_pleasanton_status).state.c_str());
+      it.printf(0, 80, id(my_font), "The next Millbrae is: %s", id(bart_next_train_millbrae_status).state.c_str());
+      it.printf(0, 100, id(my_font), "The next Pittsburg/Bay Point is: %s", id(bart_next_train_pittsburg_bay_point_status).state.c_str());
+      it.printf(0, 120, id(my_font), "The next Richmond is: %s", id(bart_next_train_richmond_status).state.c_str());
+      it.printf(0, 140, id(my_font), "The next SF Airport is: %s", id(bart_next_train_sf_airport_status).state.c_str());
+      it.printf(0, 160, id(my_font), "The next SFO/Millbrae is: %s", id(bart_next_train_sfo_millbrae_status).state.c_str());
+      it.printf(0, 180, id(my_font), "The next 24th Street is: %s", id(bart_next_train_24th_street_status).state.c_str());
