--- a/albionboxes/dev_lilygo_eink_display.yaml
+++ b/albionboxes/dev_lilygo_eink_display.yaml
@@ -70,6 +70,11 @@ external_components:
 #  - source: github://kaeltis/esphome-lilygo-t547plus
 #    components: ["lilygo_t5_47_battery"]
 
+script:
+  - id: all_data_received
+    then:
+      - component.update: t5_display
+
 text_sensor:
   - platform: homeassistant
     name: "Bart Next Train Antioch Status"
@@ -77,72 +82,70 @@ text_sensor:
     id: bart_next_train_antioch_status
     on_value:
       then:
-        - lambda: |-
-            ESP_LOGD("bart_next_train_antioch_sensor", "The current antioch sensor is %s", x.c_str());
-        - component.update: t5_display
+        - script.execute: all_data_received
   - platform: homeassistant
     name: "Bart Next Train Berryessa Status"
     entity_id: text.bart_next_train_berryessa_status
     id: bart_next_train_berryessa_status
     on_value:
       then:
-        - component.update: t5_display
+        - script.execute: all_data_received
   - platform: homeassistant
     name: "Bart Next Train Daly City Status"
     entity_id: text.bart_next_train_daly_city_status
     id: bart_next_train_daly_city_status
     on_value:
       then:
-        - component.update: t5_display
+        - script.execute: all_data_received
   - platform: homeassistant
     name: "Bart Next Train Dublin/Pleasanton Status"
     entity_id: text.bart_next_train_dublin_pleasanton_status
     id: bart_next_train_dublin_pleasanton_status
     on_value:
       then:
-        - component.update: t5_display
+        - script.execute: all_data_received
   - platform: homeassistant
     name: "Bart Next Train Millbrae Status"
     entity_id: text.bart_next_train_millbrae_status
     id: bart_next_train_millbrae_status
     on_value:
       then:
-        - component.update: t5_display
+        - script.execute: all_data_received
   - platform: homeassistant
     name: "Bart Next Train Pittsburg/Bay Point Status"
     entity_id: text.bart_next_train_pittsburg_bay_point_status
     id: bart_next_train_pittsburg_bay_point_status
     on_value:
       then:
-        - component.update: t5_display
+        - script.execute: all_data_received
   - platform: homeassistant
     name: "Bart Next Train Richmond Status"
     entity_id: text.bart_next_train_richmond_status
     id: bart_next_train_richmond_status
     on_value:
       then:
-        - component.update: t5_display
+        - script.execute: all_data_received
   - platform: homeassistant
     name: "Bart Next Train SF Airport Status"
     entity_id: text.bart_next_train_sf_airport_status
     id: bart_next_train_sf_airport_status
     on_value:
       then:
-        - component.update: t5_display
+        - script.execute: all_data_received
   - platform: homeassistant
     name: "Bart Next Train SFO/Millbrae Status"
     entity_id: text.bart_next_train_sfo_millbrae_status
     id: bart_next_train_sfo_millbrae_status
     on_value:
       then:
-        - component.update: t5_display
+        - script.execute: all_data_received
   - platform: homeassistant
     name: "Bart Next Train 24th Street Status"
     entity_id: text.bart_next_train_24th_street_status
     id: bart_next_train_24th_street_status
     on_value:
       then:
-        - component.update: t5_display
+        - script.execute: all_data_received
 
 display:
   - platform: t547
