--- a/albionboxes/dev_lilygo_eink_display.yaml
+++ b/albionboxes/dev_lilygo_eink_display.yaml
@@ -152,19 +152,27 @@ display:
     id: t5_display
     update_interval: 120s
     lambda: |-
+      float screenheight = it.get_height();
+      float screenwidth = it.get_width();
+      float halfscreenheight = screenheight / 2;
+      float halfscreenwidth = screenwidth / 2;
       //ESP_LOGD("display", "got antioch state %s", id(bart_next_train_antioch_status).state);
       //ESP_LOGD("display", "got daly city state %s", id(bart_next_train_daly_city_status).state);
       //ESP_LOGD("display", "got antioch state to string %s", id(bart_next_train_antioch_status).state.c_str());
       //ESP_LOGD("display", "got daly city state to string %s", id(bart_next_train_daly_city_status).state.c_str());
       //ESP_LOGD("display", "got antioch numerical state %d", id(bart_next_train_antioch_status).state);
       //ESP_LOGD("display", "got daly city numerical state %d", id(bart_next_train_daly_city_status).state);
-      it.printf(0, 0, id(my_font), "The next Antioch is: %s", id(bart_next_train_antioch_status).state.c_str());
-      it.printf(0, 20, id(my_font), "The next Berryessa is: %s", id(bart_next_train_berryessa_status).state.c_str());
-      it.printf(0, 40, id(my_font), "The next Daly City is: %s", id(bart_next_train_daly_city_status).state.c_str());
-      it.printf(0, 60, id(my_font), "The next Dublin/Pleasanton is: %s", id(bart_next_train_dublin_pleasanton_status).state.c_str());
-      it.printf(0, 80, id(my_font), "The next Millbrae is: %s", id(bart_next_train_millbrae_status).state.c_str());
-      it.printf(0, 100, id(my_font), "The next Pittsburg/Bay Point is: %s", id(bart_next_train_pittsburg_bay_point_status).state.c_str());
-      it.printf(0, 120, id(my_font), "The next Richmond is: %s", id(bart_next_train_richmond_status).state.c_str());
-      it.printf(0, 140, id(my_font), "The next SF Airport is: %s", id(bart_next_train_sf_airport_status).state.c_str());
-      it.printf(0, 160, id(my_font), "The next SFO/Millbrae is: %s", id(bart_next_train_sfo_millbrae_status).state.c_str());
-      it.printf(0, 180, id(my_font), "The next 24th Street is: %s", id(bart_next_train_24th_street_status).state.c_str());
+      // south direction
+      it.print(0, 0, id(my_font), TextAlign::LEFT, "South");
+      it.printf(0, 20, id(my_font), TextAlign::LEFT, "The next Daly City is: %s", id(bart_next_train_daly_city_status).state.c_str());
+      it.printf(0, 40, id(my_font), TextAlign::LEFT, "The next Millbrae is: %s", id(bart_next_train_millbrae_status).state.c_str());
+      it.printf(0, 60, id(my_font), TextAlign::LEFT, "The next SF Airport is: %s", id(bart_next_train_sf_airport_status).state.c_str());
+      it.printf(0, 80, id(my_font), TextAlign::LEFT, "The next SFO/Millbrae is: %s", id(bart_next_train_sfo_millbrae_status).state.c_str());
+      it.printf(0, 100, id(my_font), TextAlign::LEFT, "The next 24th Street is: %s", id(bart_next_train_24th_street_status).state.c_str());
+      // north direction
+      it.print(halfscreenwidth, 0, id(my_font), TextAlign::LEFT, "North");
+      it.printf(halfscreenwidth, 20, id(my_font), TextAlign::LEFT, "The next Antioch is: %s", id(bart_next_train_antioch_status).state.c_str());
+      it.printf(halfscreenwidth, 40, id(my_font), TextAlign::LEFT, "The next Berryessa is: %s", id(bart_next_train_berryessa_status).state.c_str());
+      it.printf(halfscreenwidth, 60, id(my_font), TextAlign::LEFT, "The next Dublin/Pleasanton is: %s", id(bart_next_train_dublin_pleasanton_status).state.c_str());
+      it.printf(halfscreenwidth, 80, id(my_font), TextAlign::LEFT, "The next Pittsburg/Bay Point is: %s", id(bart_next_train_pittsburg_bay_point_status).state.c_str());
+      it.printf(halfscreenwidth, 100, id(my_font), TextAlign::LEFT, "The next Richmond is: %s", id(bart_next_train_richmond_status).state.c_str());
