--- a/albionboxes/common/fonts.yaml
+++ b/albionboxes/common/fonts.yaml
@@ -20,5 +20,14 @@ font:
     size: 20
     glyphs: '[]!"%()<=>+,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz/³µ'
   - file: "gfonts://Roboto"
+    id: bart_time_roboto
+    glyphs: '[]!"%()<=>+,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz/³µ'
+    size: 32
+  - file: "gfonts://Roboto"
     id: big_time_roboto
+    glyphs: '[]!"%()<=>+,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz/³µ'
     size: 42
+  - file: "gfonts://Roboto"
+    id: big_title_roboto
+    glyphs: '[]!"%()<=>+,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz/³µ'
+    size: 60
