Slight clean up I guess

--- a/albionboxes/dev_lilygo_eink_display.yaml
+++ b/albionboxes/dev_lilygo_eink_display.yaml
@@ -167,8 +167,12 @@ display:
       it.printf(0, 80, id(bart_time_roboto), TextAlign::LEFT, "Daly City => %s", id(bart_next_train_daly_city_status).state.c_str());
       it.printf(0, 130, id(bart_time_roboto), TextAlign::LEFT, "Millbrae => %s", id(bart_next_train_millbrae_status).state.c_str());
       it.printf(0, 180, id(bart_time_roboto), TextAlign::LEFT, "SF Airport => %s", id(bart_next_train_sf_airport_status).state.c_str());
-      it.printf(0, 230, id(bart_time_roboto), TextAlign::LEFT, "SFO/Millbrae => %s", id(bart_next_train_sfo_millbrae_status).state.c_str());
-      it.printf(0, 280, id(bart_time_roboto), TextAlign::LEFT, "24th Street => %s", id(bart_next_train_24th_street_status).state.c_str());
+      if (id(bart_next_train_sfo_millbrae_status).state != "unknown") {
+        it.printf(0, 230, id(bart_time_roboto), TextAlign::LEFT, "SFO/Millbrae => %s", id(bart_next_train_sfo_millbrae_status).state.c_str());
+      }
+      if (id(bart_next_train_24th_street_status).state != "unknown") {
+        it.printf(0, 280, id(bart_time_roboto), TextAlign::LEFT, "24th Street => %s", id(bart_next_train_24th_street_status).state.c_str());
+      }
       // north direction
       it.print(halfscreenwidth, 0, id(big_title_roboto), TextAlign::LEFT, "North");
       it.printf(halfscreenwidth, 80, id(bart_time_roboto), TextAlign::LEFT, "Antioch => %s", id(bart_next_train_antioch_status).state.c_str());
