--- a/albionboxes/dev_lilygo_eink_display.yaml
+++ b/albionboxes/dev_lilygo_eink_display.yaml
@@ -71,9 +71,11 @@ external_components:
 #    components: ["lilygo_t5_47_battery"]
 
 script:
-  - id: all_data_received
+  - id: any_data_received
     then:
-      - component.update: t5_display
+      # TODO: take a timestamp of an update and apply if it's been more than 30s and increase screen update time to 120 or 240 even
+      - logger.log: "Starting any_data_received"
+#      - component.update: t5_display
 
 text_sensor:
   - platform: homeassistant
@@ -82,75 +84,75 @@ text_sensor:
     id: bart_next_train_antioch_status
     on_value:
       then:
-        - script.execute: all_data_received
+        - script.execute: any_data_received
   - platform: homeassistant
     name: "Bart Next Train Berryessa Status"
     entity_id: text.bart_next_train_berryessa_status
     id: bart_next_train_berryessa_status
     on_value:
       then:
-        - script.execute: all_data_received
+        - script.execute: any_data_received
   - platform: homeassistant
     name: "Bart Next Train Daly City Status"
     entity_id: text.bart_next_train_daly_city_status
     id: bart_next_train_daly_city_status
     on_value:
       then:
-        - script.execute: all_data_received
+        - script.execute: any_data_received
   - platform: homeassistant
     name: "Bart Next Train Dublin/Pleasanton Status"
     entity_id: text.bart_next_train_dublin_pleasanton_status
     id: bart_next_train_dublin_pleasanton_status
     on_value:
       then:
-        - script.execute: all_data_received
+        - script.execute: any_data_received
   - platform: homeassistant
     name: "Bart Next Train Millbrae Status"
     entity_id: text.bart_next_train_millbrae_status
     id: bart_next_train_millbrae_status
     on_value:
       then:
-        - script.execute: all_data_received
+        - script.execute: any_data_received
   - platform: homeassistant
     name: "Bart Next Train Pittsburg/Bay Point Status"
     entity_id: text.bart_next_train_pittsburg_bay_point_status
     id: bart_next_train_pittsburg_bay_point_status
     on_value:
       then:
-        - script.execute: all_data_received
+        - script.execute: any_data_received
   - platform: homeassistant
     name: "Bart Next Train Richmond Status"
     entity_id: text.bart_next_train_richmond_status
     id: bart_next_train_richmond_status
     on_value:
       then:
-        - script.execute: all_data_received
+        - script.execute: any_data_received
   - platform: homeassistant
     name: "Bart Next Train SF Airport Status"
     entity_id: text.bart_next_train_sf_airport_status
     id: bart_next_train_sf_airport_status
     on_value:
       then:
-        - script.execute: all_data_received
+        - script.execute: any_data_received
   - platform: homeassistant
     name: "Bart Next Train SFO/Millbrae Status"
     entity_id: text.bart_next_train_sfo_millbrae_status
     id: bart_next_train_sfo_millbrae_status
     on_value:
       then:
-        - script.execute: all_data_received
+        - script.execute: any_data_received
   - platform: homeassistant
     name: "Bart Next Train 24th Street Status"
     entity_id: text.bart_next_train_24th_street_status
     id: bart_next_train_24th_street_status
     on_value:
       then:
-        - script.execute: all_data_received
+        - script.execute: any_data_received
 
 display:
   - platform: t547
     id: t5_display
-    update_interval: 120s
+    update_interval: 30s
     lambda: |-
       float screenheight = it.get_height();
       float screenwidth = it.get_width();
