--- a/albionboxes/dev_friend_finder_ibeacon_alpha.yaml
+++ b/albionboxes/dev_friend_finder_ibeacon_alpha.yaml
@@ -1,11 +1,11 @@
 # Still want to convert to ethernet at some point
 # pattern for naming
 substitutions:
-  node_name: devfriendfinderalpha
-  friendly_name: Dev Friend Finder Alpha
+  node_name: devffibeaconalpha
+  friendly_name: Dev Friend Finder iBeacon Alpha
   area: Dev
-  comment: "Developing a rumbling friend finder (alpha instance)"
-  box_config_file_name: dev_friend_finder_alpha
+  comment: "Developing a test iBeacon for friend finder (alpha instance)"
+  box_config_file_name: dev_friend_finder_ibeacon_alpha
   # Below is custom for this project
   friend_finder_alpha_uuid: !secret friend_finder_alpha_uuid
   friend_finder_alpha_friendly_name: !secret friend_finder_alpha_friendly_name
@@ -32,17 +32,4 @@ packages:
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
   button: !include { file: common/default_atom_button.yaml, vars: { button_pin: 39 } }
-  scripts: !include common/friend_finder/scripts/run_motor_script.yaml
-  vibration_motor: !include common/friend_finder/components/vibration_motor.yaml
-#  ibeacon_broadcast: !include { file: common/friend_finder/ble/ble_beacon_broadcast.yaml, vars: { ibeacon_uuid: "${friend_finder_alpha_uuid}" } }
-
-# https://esphome.io/components/button/index.html
-button:
-  - <<: !include common/friend_finder/buttons/test_motor_button.yaml
-  - <<: !include common/friend_finder/buttons/stop_motor_button.yaml
-
-# https://esphome.io/components/esp32_ble_tracker
-esp32_ble_tracker:
-
-binary_sensor:
-  - <<: !include { file: common/friend_finder/ble/ble_beacon_sensor.yaml, vars: { ibeacon_uuid: "${friend_finder_beta_uuid}", ibeacon_friendly_name: "${friend_finder_beta_friendly_name}" } }
+  ibeacon_broadcast: !include { file: common/friend_finder/ble/ble_beacon_broadcast.yaml, vars: { ibeacon_uuid: "${friend_finder_alpha_uuid}" } }
