--- a/albionboxes/common/friend_finder/ble/ble_beacon_sensor.yaml
+++ b/albionboxes/common/friend_finder/ble/ble_beacon_sensor.yaml
@@ -3,5 +3,16 @@
 - platform: ble_presence
   ibeacon_uuid: "${ibeacon_uuid}"
   name: "${ibeacon_friendly_name} iBeacon"
+  id: "${ibeacon_sensor_id_prefix}_ble_presence_binary_sensor"
 #  min_rssi: -80db
 #  timeout: 45s
+#  on_state:
+#    then:
+#      - lambda: |-
+#          // Within lambda, get the binary sensor state and conditionally do something
+#          ESP_LOGD("ibeacon_presence", "got x.state: %d", x.state);
+#          //if (id(my_binary_sensor).state) {
+#          //  // Binary sensor is ON, do something here
+#          //} else {
+#          //  // Binary sensor is OFF, do something else here
+#          //}
