--- a/albionboxes/dev_friend_finder_beta.yaml
+++ b/albionboxes/dev_friend_finder_beta.yaml
@@ -9,8 +9,10 @@ substitutions:
   # Below is custom for this project
   friend_finder_alpha_uuid: !secret friend_finder_alpha_uuid
   friend_finder_alpha_friendly_name: !secret friend_finder_alpha_friendly_name
+  friend_finder_alpha_id_prefix: !secret friend_finder_alpha_id_prefix
   friend_finder_beta_uuid: !secret friend_finder_beta_uuid
   friend_finder_beta_friendly_name: !secret friend_finder_beta_friendly_name
+  friend_finder_beta_id_prefix: !secret friend_finder_beta_id_prefix
 
 packages:
 #  esphome: !include common/default_esphome.yaml
@@ -34,6 +36,7 @@ packages:
   button: !include { file: common/default_atom_button.yaml, vars: { button_pin: 39 } }
   scripts: !include common/friend_finder/scripts/run_motor_script.yaml
   vibration_motor: !include common/friend_finder/components/vibration_motor.yaml
+  friend_check_interval: !include common/friend_finder/utils/friend_check_interval.yaml
 #  ibeacon_broadcast: !include { file: common/friend_finder/ble/ble_beacon_broadcast.yaml, vars: { ibeacon_uuid: "${friend_finder_beta_uuid}" } }
 
 # https://esphome.io/components/button/index.html
@@ -45,4 +48,5 @@ button:
 esp32_ble_tracker:
 
 binary_sensor:
-  - <<: !include { file: common/friend_finder/ble/ble_beacon_sensor.yaml, vars: { ibeacon_uuid: "${friend_finder_alpha_uuid}", ibeacon_friendly_name: "${friend_finder_alpha_friendly_name}" } }
+  - <<: !include { file: common/friend_finder/ble/ble_beacon_sensor.yaml, vars: { ibeacon_uuid: "${friend_finder_alpha_uuid}", ibeacon_friendly_name: "${friend_finder_alpha_friendly_name}", ibeacon_sensor_id_prefix: "${friend_finder_alpha_id_prefix}" } }
+  - <<: !include { file: common/friend_finder/components/friend_binary_sensor.yaml, vars: { ibeacon_sensor_id_prefix: "${friend_finder_alpha_id_prefix}" } }
