--- a/albionboxes/prod_living_room_cabinet_temp_sensor.yaml
+++ b/albionboxes/prod_living_room_cabinet_temp_sensor.yaml
@@ -12,7 +12,7 @@ substitutions:
   second_sensor_name: "Living Room Food Cabinet Weed Shelf"
 #  third_sensor_name: "Living Room Food Cabinet NUC Shelf"
 #  fourth_sensor_name: "Living Room Food Cabinet PS5 Shelf"
-#  fifth_sensor_name: "Living Room Food Cabinet RPi Shelf"
+  fifth_sensor_name: "Living Room Food Cabinet Controllers Shelf"
   oversampling_value: "16x"
   update_interval_value: "60s"
 
@@ -54,8 +54,8 @@ tca9548a:
 #        channel: 3
 #      - bus_id: multiplex0channel4
 #        channel: 4
-#      - bus_id: multiplex0channel5
-#        channel: 5
+      - bus_id: multiplex0channel5
+        channel: 5
 
 sensor:
   - <<: !include { file: common/env_iv_sht4x_sensor.yaml, vars: { env_iv_i2c_id: "multiplex0channel0", env_iv_sensor_name: "${zeroth_sensor_name}" } }
@@ -64,3 +64,5 @@ sensor:
   - <<: !include { file: common/env_iv_bmp280_sensor.yaml, vars: { env_iv_i2c_id: "multiplex0channel1", env_iv_sensor_name: "${first_sensor_name}" } }
   - <<: !include { file: common/env_iv_sht4x_sensor.yaml, vars: { env_iv_i2c_id: "multiplex0channel2", env_iv_sensor_name: "${second_sensor_name}" } }
   - <<: !include { file: common/env_iv_bmp280_sensor.yaml, vars: { env_iv_i2c_id: "multiplex0channel2", env_iv_sensor_name: "${second_sensor_name}" } }
+  - <<: !include { file: common/env_iv_sht4x_sensor.yaml, vars: { env_iv_i2c_id: "multiplex0channel5", env_iv_sensor_name: "${fifth_sensor_name}" } }
+  - <<: !include { file: common/env_iv_bmp280_sensor.yaml, vars: { env_iv_i2c_id: "multiplex0channel5", env_iv_sensor_name: "${fifth_sensor_name}" } }
